nav bar is done

--- a/index.html
+++ b/index.html
@@ -10,28 +10,34 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div>
-        <div class="navBar">
-            <div class="logo">FoodTime</div>
-            <nav class="nav">
-                <ul>
-                    <li class="list"><a href="#" class="link">Home</a></li>
-                    <li class="list"><a href="#" class="link">Blog</a></li>
-                    <li class="list"><a href="#" class="link">About Us</a></li>
-                    <li class="list"><a href="#" class="link">En <span><i class="fa fa-angle-down"></i></span></a></li>
-                </ul>
-                <ul>
-                    <li class="list"><a href="#" class="button button-1">Login</a></li>
-                    <li class="list"><a href="#" class="button button-2"><i class="fa fa-cart-plus"></i></a></li>
+    <div class="navBg">
+        <div class="container">
+            <div class="navBar1">
+                <div class="logo">FoodTime</div>
+                <nav class="nav">
+                    <ul>
+                        <li class="list"><a href="#" class="link">Home</a></li>
+                        <li class="list"><a href="#" class="link">Blog</a></li>
+                        <li class="list"><a href="#" class="link">About Us</a></li>
+                   <li class="list"><a href="#" class="link">En <span><i class="fa fa-angle-down"></i></span></a></li>
+               </ul>
+               <ul>
+                   <li class="list"><a href="#" class="button button-1">Login</a></li>
+                   <li class="list"><a href="#" class="button button-2"><i class="fa fa-cart-plus"></i></a></li>
                 </ul>
             </nav>
         </div>
-        <div class="header">
+        </div>
+    </div>
+
+    <div>
+        <div class="header container">
             <div class="col col-1"><h2>Order food online from your favourite local restaurants.</h2>
             <p>Freshly made food delivered to your door.</p>
             <div class="search">
                 <div></div>
-                <input type="text" placeholder="enter your location"><button class="searchBtn button"><span><i class="fa fa-search"></i></span> Search</button>
+                <input type="text" placeholder="enter your location">
+                <button class="searchBtn button"><span><i class="fa fa-search"></i></span> Search</button>
             </div>
             </div>
             <div class="col col-2">
