--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         </div>
     </div>
 
-    <div>
+    <!-- <div>
+        <div class="leaf_left"><img src="./assets/img2.png" alt=""></div>
         <div class="header container">
             <div class="col col-1"><h2>Order food online from your favourite local restaurants.</h2>
             <p>Freshly made food delivered to your door.</p>
@@ -42,8 +43,31 @@
             </div>
             <div class="col col-2">
                 <div><img src="./assets/img1.png" alt="plater"></div>
-                <!-- <div><img src="./assets/img3.png" alt="small plater"></div>
-                <div><img src="./assets/img6.png" alt=""></div> -->
+                <div class="plater1"><img src="./assets/img3.png" alt="small plater"></div>
+                <div class="leaf"><img src="./assets/img6.png" alt=""></div> 
+                <div class="floatingCard">
+                    <div>
+                        <i class="fa fa-check-circle"></i>
+                        <h2>200k</h2>
+                        <i class="fa fa-plus"></i>
+                    </div>
+                    <h2 class="h2 floatTitle">people delivered</h2>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <div>
+        
+        <div class="header1 container">
+            <div class=""><h2>Explore your favourite city’s food.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur. Ornare massa nunc nibh tristique. Non ligula tristique ut ut libero sit convallis maecenas. At egestas auctor porta mattis.</p>
+            <div class="">
+                <button class="searchBtn button"> Search <span><i class="fa fa-arrow-right"></i></span></button>
+            </div>
+            </div>
+            <div class="">
+                <div><img src="./assets/img4.png" alt="plater"></div>
+                <div class="cycleContainer"><img class="cycle" src="./assets/img5.png" alt="cicle"></div>
             </div>
         </div>
     </div>
