--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <!-- <div>
+    <div>
         <div class="leaf_left"><img src="./assets/img2.png" alt=""></div>
         <div class="header container">
             <div class="col col-1"><h2>Order food online from your favourite local restaurants.</h2>
@@ -55,18 +55,16 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <div>
         
         <div class="header1 container">
             <div class=""><h2>Explore your favourite city’s food.</h2>
             <p>Lorem ipsum dolor sit amet consectetur. Ornare massa nunc nibh tristique. Non ligula tristique ut ut libero sit convallis maecenas. At egestas auctor porta mattis.</p>
-            <div class="">
-                <button class="searchBtn button"> Search <span><i class="fa fa-arrow-right"></i></span></button>
+                <button class="searchBtn button"> Explore <span><i class="fa fa-arrow-right"></i></span></button>
             </div>
-            </div>
-            <div class="">
-                <div><img src="./assets/img4.png" alt="plater"></div>
+            <div class="2">
+                <div class="scene"><img src="./assets/img4.png" alt="plater"></div>
                 <div class="cycleContainer"><img class="cycle" src="./assets/img5.png" alt="cicle"></div>
             </div>
         </div>
