--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                    <li class="list"><a href="#" class="button button-1">Login</a></li>
                    <li class="list"><a href="#" class="button button-2"><i class="fa fa-cart-plus"></i></a></li>
                 </ul>
-            </nav>
-        </div>
+                </nav>
+                <div class="hamburder"><i class="fa fa-bars"></i></div>
+            </div>
         </div>
     </div>
 
@@ -38,7 +39,7 @@
             <div class="search">
                 <div></div>
                 <input type="text" placeholder="enter your location">
-                <button class="searchBtn button"><span><i class="fa fa-search"></i></span> Search</button>
+                <button class="headerBtn"><span><i class="fa fa-search"></i></span> Search</button>
             </div>
             </div>
             <div class="col col-2">
